# cuda-ml

./: CMakeLists.txt  README.md  check_dependencies.sh  future-features.txt  requirements.txt
src/: CMakeLists.txt
src/cuda/: 1dConvolution.cu  CMakeLists.txt  attention.cu  attention.cuh  generation.cu  matrixMultiplication.cu  matrixTranspose.cu  mlp.cu  transformer.cu  transformer_model.cu  transformer_model.h  vectorAddition.cu
src/python/: setup.py
src/python/cuda_ml/: __init__.py  core.py  version.py
tests/: CMakeLists.txt  test_attention.cu  test_transformer.cu
